<resources>
    <string name="app_name">Exercise3</string>
    <string name="todo">TODO</string>
    <string name="enter_name">enter name</string>
    <string name="next">NEXT</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="upper">UPPER</string>
    <string name="lower">LOWER</string>
    <string name="length">Length</string>
    <string name="no_of_words">No. of words</string>
    <string name="reverse">REVERSE</string>
    <string name="initials">Initials</string>
</resources>
